# cratedb-demo

./: .env  .gitignore  README.md  docker-compose.yaml  env.example  ingest.ipynb  main.py  project_structure  pyproject.toml
analytics/: daily-fire-incidents.sql  daily_fire_incidet.py  emergency-calls-near-fires.sql  emergency_calls.py  fire-hotspots.sql  fire-related-calls.sql  fire_analysis.py  fire_locations.py  fire_temporal.py  fires-by-county.sql  fires-in-area.sql  readme.md  temporal-correlation.sql
analytics/sql/: emergency-calls-by-topic.sql  emergency-calls-near-fires.sql  emergency-response-times.sql  fire-locations.sql  fire-related-calls.sql  fire-size-distribution.sql  fires-in-area.sql  hourly-emergency-patterns.sql  temporal-correlation.sql
cratedb_demo/: __init__.py
data/: emergency_calls.csv  wfigs-partial.csv  wfigs-partial.xlsx  wfigs.csv  wfigs.geojson
infrastructure/: create_database_objects.py
ingestion/: ingest_csv.py  ingest_geojson.py
presentation/: cratedb-demo.pptx
services/: client.py
sql/: emergency-calls.sql  wfigs-csv-ingest.sql  wfigs-geo.sql  wfigs.sql
src/streamlit/: fetch_data.py
streamlit/: fetch_data.py  streamlit_app.py
