[tool.poetry]
name = "cratedb-demo"
version = "0.1.0"
description = "Your project description"
authors = ["sindi@datamax.ai", "dardan@datamax.ai"]
readme = "README.md"
packages = [{include = "cratedb_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
crate = "^0.35.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.3.0"

[tool.poetry.scripts]
cratedb-demo = "cratedb_demo.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and import sorting (`I`)
lint.select = ["E", "F", "I"]
# Same as Black
line-length = 120
# Sort imports
lint.fix = true
format.quote-style = "double" 