[tool.poetry]
name = "cratedb-demo"
version = "0.1.0"
description = "Your project description"
authors = ["Sindi Ziu <sindi@datamax.ai>", "Dardan Xhymshiti <dardan@datamax.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
crate = "^0.35.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
streamlit = "^1.24.0"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.3.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
